# SeamlessLoopMobileNative

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.md  build.gradle.kts  gradle.properties  run.bat  settings.gradle.kts
.claude/: settings.local.json
.github/workflows/: android-apk-build.yml
app/: build.gradle.kts
app/src/androidTest/java/com/cpu/seamlessloopmobile/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioDecoder.cpp  AudioDecoder.h  AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  native-lib.cpp
app/src/main/cpp/loopfinder/: CMakeLists.txt  README.md
app/src/main/cpp/loopfinder/include/loopfinder/: audio_decoder.h  beat_detector.h  chroma.h  common.h  hpss.h  loop_finder.h  loopfinder_api.h  stft.h
app/src/main/cpp/loopfinder/jni/: jni_main.cpp
app/src/main/cpp/loopfinder/src/: audio_decoder.cpp  beat_detector.cpp  chroma.cpp  hpss.cpp  loop_finder.cpp  loopfinder_api.cpp  stft.cpp
app/src/main/cpp/loopfinder/test/: test_main.cpp
app/src/main/java/com/cpu/seamlessloopmobile/: MainActivity.kt
app/src/main/java/com/cpu/seamlessloopmobile/adapter/: FolderAdapter.kt  LibraryAdapter.kt  SongAdapter.kt
app/src/main/java/com/cpu/seamlessloopmobile/audio/: AudioFocusManager.kt  AudioPlayState.kt  HeadsetPlugReceiver.kt  IMultiPlayer.kt  MediaBrowserHelper.kt  MediaControlManager.kt  MediaSessionPlaybackStateThrottler.kt  Notify.kt  NotifyImpl.kt  Playback.kt  PlaybackCommand.kt  PlaybackManager.kt  PlaybackService.kt  QueueManager.kt  SystemMediaProgressSyncController.kt
app/src/main/java/com/cpu/seamlessloopmobile/data/: LoopDetectionRepository.kt  MusicRepository.kt  MusicScannerRepository.kt  PlaylistRepository.kt  SettingsManager.kt  SongRepository.kt
app/src/main/java/com/cpu/seamlessloopmobile/db/: AppDatabase.kt  DateConverter.kt  PcDatabaseExporter.kt  PcDatabaseImporter.kt
app/src/main/java/com/cpu/seamlessloopmobile/dialogs/: LoopSettingsDialog.kt
app/src/main/java/com/cpu/seamlessloopmobile/jni/: LoopPoint.kt  NativeAudio.kt
app/src/main/java/com/cpu/seamlessloopmobile/model/: Album.kt  Artist.kt  Folder.kt  LibraryItem.kt  LoopPoint.kt  PlayQueueDao.kt  PlayQueueItem.kt  Playlist.kt  PlaylistDao.kt  PlaylistFolder.kt  PlaylistItem.kt  Song.kt  SongDao.kt  SongEntity.kt  UserRating.kt
app/src/main/java/com/cpu/seamlessloopmobile/scanner/: AudioScanner.kt
app/src/main/java/com/cpu/seamlessloopmobile/ui/: ProgressUpdateHelper.kt  SelectionController.kt
app/src/main/java/com/cpu/seamlessloopmobile/utils/: HapticFeedback.kt  TimeUtils.kt
app/src/main/java/com/cpu/seamlessloopmobile/viewmodel/: GitHubSyncUiState.kt  LibraryViewModel.kt  LoopDetectionViewModel.kt  MainViewModel.kt  MainViewModelFactory.kt  MusicDialog.kt  PlaylistViewModel.kt  SelectionViewModel.kt
app/src/main/res/layout/: activity_main.xml  dialog_loop_controls.xml  item_folder.xml  item_header.xml  item_song.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cpu/seamlessloopmobile/: ExampleUnitTest.kt
app/src/test/java/com/cpu/seamlessloopmobile/audio/: MediaSessionPlaybackStateThrottlerTest.kt  SystemMediaProgressSyncControllerTest.kt
app/src/test/java/com/cpu/seamlessloopmobile/data/: ABLoopTest.kt
app/src/test/java/com/cpu/seamlessloopmobile/db/: DaoTest.kt  PcDatabaseImporterTest.kt
app/src/test/java/com/cpu/seamlessloopmobile/scanner/: AudioScannerTest.kt
app/src/test/java/com/cpu/seamlessloopmobile/utils/: TimeUtilsTest.kt
app/src/test/java/com/cpu/seamlessloopmobile/viewmodel/: PlayModeTest.kt
app/src/test/resources/pc_db_samples/: LoopData.db
app/src/test/resources/sync/: playback_stats_v2_android_golden.json  playback_stats_v2_tombstone_collision.json  playback_stats_v2_wpf_canonical.json
docs/: 01数据库相关操作所在文件.md  02 MusicRepository 详解.md  03 PcDatabaseImporter 的改进.md  04 SongRepository.md  05 playbackManager的研究.md  06 扫描的困惑.md  07 A段没有同步到歌单歌曲的困惑.md  08_MainScreen性能与重组优化.md  2026-02-17_移动端音频引擎流式重构.md  2026-02-18_无缝循环优化与交互功能实现.md  2026-05-16_自动探测循环点功能实现.md  2026-05-20_系统媒体进度同步修复.md  2026-06-06_PC数据库双向同步与导出.md  2026-06-07_无缝循环播放恢复与次数限制.md  2026-07-06_NeriPlayer风格UI与播放统计.md  2026-07-07_GitHub同步与自动同步.md  2026-07-12_播放统计与GitHub同步SchemaV2.md  APlayer_Analysis.md  Challenges.md  Development_Log_Phase1_Phase2.md  Development_Plan.md  Headset_Logic_Fix_Plan.md  Project_Architecture.md  Project_Overview.md  TODO.md  Technical_References.md  Unit_Testing_Guide.md  pc_sync_and_playlist_creation_plan.md  seamless_loop_files.md  ui研究.md  播放状态持久化机制参考.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+84 files in other folders)
